# Battlefield-Sim

./: .gitignore  CMakeLists.txt  README.md  auto_simulation.py  docker-compose.yml  requirements.py
.github/: GITHUB_ACTIONS_SETUP.md  QUICK_START.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
docker/: dev.Dockerfile
logs/: ground_truth.txt
logs/logs/: comparison_report.csv  comparison_report_without_physics.csv  script.py
proto/common/: geo.proto  header.proto
proto/fusion/: fusion.proto
proto/sensors/: radar.proto  sigint.proto  uav.proto
services/common_utils/: CMakeLists.txt  config.cpp  config.h  geo_utils.cpp  geo_utils.h  physics.cpp  physics.h
services/fusion_service/: CMakeLists.txt
services/fusion_service/src/: fusion_monitor.cpp  fusion_monitor.h  fusion_service.cpp  fusion_service.h  kalman_filter.cpp  kalman_filter.h  main.cpp
services/fusion_service/src/utils/: logging.cpp  logging.h
services/monitor_cli/: CMakeLists.txt
services/monitor_cli/src/: main.cpp  monitor_cli.cpp  monitor_cli.h
services/sensor_radar/: CMakeLists.txt
services/sensor_radar/src/: main.cpp  radar_client.cpp  radar_client.h
services/sensor_sigint/: CMakeLists.txt
services/sensor_sigint/src/: main.cpp  sigint_client.cpp  sigint_client.h
services/sensor_uav/: CMakeLists.txt
services/sensor_uav/src/: main.cpp  uav_client.cpp  uav_client.h
